# dialogue-memory

./: .gitignore  CHANGELOG.md  README.md  config.py  db.py  dialogue_archive.py  dialogue_capture.py  dialogue_embed_batch.py  dialogue_health.py  dialogue_inject.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: milestone-contract.md  prd.json
swarm/launchers/: agent-launch-template.sh  mega-chief.sh
swarm/prompts/: W0-S1-prompt.md  W0-S2-prompt.md  W0-S3-prompt.md  W0-S4-prompt.md  W1-S0-prompt.md  W1-S1-prompt.md  W1-S2-prompt.md  W2-S0-prompt.md
tests/: conftest.py  test_capture.py  test_db.py  test_inject.py
